JSW Devsb/src/objects/Invoice_Discounts__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Invoice_Number__c</fullName>
        <label>Commercial Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Discount_Value__c</fullName>
        <label>Invoice Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Discounts</relationshipLabel>
        <relationshipName>Invoice_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Be_Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Discounts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Discounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>